--- a/pages/cart.html
+++ b/pages/cart.html
@@ -7,20 +7,8 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="row justify-content-between">
-                <nav>
-                    <ul class="row">
-                        <li><a href="../index.html">HOME</a></li>
-                        <li><a href="../pages/cart.html">CART</a></li>
-                        <li><a href="../pages/product.html">PRODUCT</a></li>
-                        <li><a href="../pages/signin.html">SIGNIN</a></li>
-                        <li><a href="../pages/signup.html">SIGNUP</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
+    <div id="navbar"></div>
 </body>
+<script type="module" src="../java script/cart.js
+"></script>
 </html>
