--- a/pages/signin.html
+++ b/pages/signin.html
@@ -7,21 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="row justify-content-between">
-                <nav>
-                    <ul class="row">
-                        <li><a href="../index.html">HOME</a></li>
-                        <li><a href="../pages/cart.html">CART</a></li>
-                        <li><a href="../pages/product.html">PRODUCT</a></li>
-                        <li><a href="../pages/signin.html">SIGNIN</a></li>
-                        <li><a href="../pages/signup.html">SIGNUP</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
+    <div id="navbar"></div>
     <section>
         <div class="container">
             <form id="form">
@@ -34,4 +20,5 @@
         </div>
     </section>
 </body>
+<script type="module" src="../java script/signin.js"></script>
 </html>
