--- a/pages/product.html
+++ b/pages/product.html
@@ -8,6 +8,19 @@
 </head>
 <body>
     <div id="navbar"></div>
+    <div class="container">
+        <div class="">
+            <button id="lth">low to high</button>
+            <button id="htl">high to low</button>
+            <button id="all">all</button>
+            <button id="men">men</button>
+            <button id="women">women</button>
+            <button id="electronics">electronics</button>
+            <button id="Jewelery">Jewelery</button>
+
+            <div id="productpage"></div>
+        </div>
+    </div>
 </body>
 <script type="module" src="../java script/product.js"></script>
 </html>
